--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div class="blockWithLogo__autirization">
                         <a href="#">Log in</a>
                         <form>
-                            <input type="batton" value="Sign up">
+                            <input class="cursorPointer" type="batton" value="Sign up">
                         </form>
                     </div>
                 </div>
@@ -30,7 +30,7 @@
                     <h1>HOLIDAY DREAM</h1>
                     <p>And find the perfect partner to fullfill it</p>
                     <form class="blockTitle__Button">
-                        <input class="blockTitle__Button_redButton" type="button" value="Find your holiday partner">
+                        <input class="blockTitle__Button_redButton cursorPointer" type="button" value="Find your holiday partner">
                     </form>
                 </div>
             </div>
@@ -118,7 +118,7 @@
                     </div>
                 </div>
                 <form>
-                    <input type="button" value="See other partners">
+                    <input class="cursorPointer" type="button" value="See other partners">
                 </form>
             </section>
             <section class="ideas">
@@ -176,7 +176,7 @@
                 <p>Hi! What are your holiday interests?</p>
                 <form class="searchForm">
                     <input class="searchForm__text" type="text" placeholder="Enter your insterests">
-                    <input class="searchForm__button" type="button" value="Search partners">
+                    <input class="searchForm__button cursorPointer" type="button" value="Search partners">
                 </form>
         </div>
         </section>
