First commit rev 1.1

--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
                     </div>
                     <div class="blockWithLogo__autirization">
                         <a href="#">Log in</a>
-                        <form>
-                            <input class="cursorPointer" type="batton" value="Sign up">
-                        </form>
+                        <button class="cursorPointer">Sign Up</button>
                     </div>
                 </div>
                 <div class="blockTitle">
